# CPU-Emulator-Lab-Student-Version

./: CMakeLists.txt  RAM.txt  data.txt  instructions.txt  resources.txt  view_ram.sh
headers/: CPU.h  Emulator.h  RAM.h
src/: CPU.cpp  Emulator.cpp  RAM.cpp
tests/: test_CPU.cpp  test_RAM.cpp
